--- a/RangoAgil.API/RangoAgil.API.csproj
+++ b/RangoAgil.API/RangoAgil.API.csproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>12.0</LangVersion>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1"/>
+  </ItemGroup>
 </Project>
