--- a/RangoAgil.API/appsettings.json
+++ b/RangoAgil.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "RangoAgilDb": "Data Source=Rango.db"
+  },
   "AllowedHosts": "*"
 }
